# glider

./: .gitignore  ARCHITECTURE.md  CODE_REVIEW.md  README.md  Untitled_Experiment_20251227_133455.csv  Untitled_Experiment_20251227_151313.csv  Untitled_Experiment_20251228_175744.csv  Untitled_Experiment_20251229_174554.csv  Untitled_Experiment_20251229_185353.csv  Untitled_Experiment_20251229_185353_tracking.csv  Untitled_Experiment_20251230_120335.csv  Untitled_Experiment_20251230_121758.csv  Untitled_Experiment_20251230_122902.csv  Untitled_Experiment_20251230_123243.csv  Untitled_Experiment_20251230_123548.csv  Untitled_Experiment_20251230_124125.csv  Untitled_Experiment_20251230_124432.csv  Untitled_Experiment_20251230_125446.csv  Untitled_Experiment_20251230_125850.csv  Untitled_Experiment_20251230_130150.csv  Untitled_Experiment_20260105_142717.csv  Untitled_Experiment_20260105_142717_tracking.csv  Untitled_Experiment_20260112_123759.csv  Untitled_Experiment_20260112_123800_tracking.csv  analog.glider  error.md  experiment1.glider  i2c.py  main.glider  miniscope_stream.py  new_box.glider  notes.md  pi_setup.sh  pyproject.toml  r.json  script.py  test.glider  test_analog.py  test_camera_detection.py  tester.glider
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: CHANGELOG.md
docs/api-reference/: agent.md  core.md  flow.md  hardware.md  nodes.md  plugins.md  serialization.md  vision.md
docs/developer-guide/: architecture.md  contributing.md  custom-devices.md  custom-drivers.md  custom-nodes.md  plugin-development.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/reference/: cli.md  configuration.md  file-format.md  troubleshooting.md
docs/user-guide/: builder-mode.md  creating-experiments.md  data-recording.md  hardware-setup.md  runner-mode.md  running-experiments.md
src/glider/: __init__.py  __main__.py
src/glider.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/glider/agent/: __init__.py  actions.py  agent_controller.py  config.py  llm_backend.py  prompts.py  toolkit.py
src/glider/agent/analysis/: __init__.py  analysis_controller.py  analysis_prompts.py  analysis_tools.py
src/glider/agent/tools/: __init__.py  experiment_tools.py  hardware_tools.py  knowledge_tools.py
src/glider/core/: __init__.py  config.py  custom_device.py  data_recorder.py  experiment_session.py  flow_engine.py  flow_function.py  glider_core.py  hardware_manager.py  library.py  types.py
src/glider/gui/: __init__.py  commands.py  main_window.py  view_manager.py
src/glider/gui/controllers/: __init__.py  device_control_controller.py  hardware_controller.py
src/glider/gui/dialogs/: __init__.py  agent_settings_dialog.py  analysis_dialog.py  calibration_dialog.py  camera_settings_dialog.py  custom_device_dialog.py  experiment_dialog.py  flow_function_dialog.py  subject_dialog.py  zone_dialog.py
src/glider/gui/node_graph/: __init__.py  connection_item.py  graph_view.py  node_item.py  port_item.py
src/glider/gui/panels/: __init__.py  agent_panel.py  camera_panel.py  experiment_panel.py
src/glider/gui/runner/: __init__.py  dashboard.py  widget_factory.py
src/glider/gui/styles/: __init__.py  desktop.qss  touch.qss
src/glider/gui/widgets/: __init__.py  device_card.py  multi_camera_preview.py  touch_widgets.py
src/glider/hal/: __init__.py  base_board.py  base_device.py  mock_board.py  pin_manager.py
src/glider/hal/boards/: __init__.py  pi_gpio_board.py  telemetrix_board.py
src/glider/hal/devices/: __init__.py
src/glider/nodes/: __init__.py  base_node.py  control_nodes.py  experiment_nodes.py  flow_function_nodes.py
src/glider/nodes/hardware/: __init__.py  analog_nodes.py  device_nodes.py  digital_nodes.py
src/glider/nodes/interface/: __init__.py  display_nodes.py  input_nodes.py
src/glider/nodes/logic/: __init__.py  comparison_nodes.py  control_nodes.py  flow_nodes.py  math_nodes.py
src/glider/nodes/script/: __init__.py
src/glider/nodes/vision/: __init__.py  zone_nodes.py
src/glider/plugins/: __init__.py  plugin_manager.py
src/glider/serialization/: __init__.py  schema.py  serializer.py
src/glider/vision/: __init__.py  behavior_analyzer.py  calibration.py  camera_manager.py  cv_processor.py  multi_camera_manager.py  multi_video_recorder.py  tracking_logger.py  video_recorder.py  zones.py
tests/: conftest.py
tests/integration/: test_experiment_workflow.py
tests/unit/core/: test_config.py  test_experiment_session.py  test_flow_engine.py  test_types.py
tests/unit/hal/: test_pin_manager.py  test_telemetrix_board.py
tests/unit/nodes/: test_base_node.py
tests/unit/serialization/: test_schema.py
tests/unit/vision/: test_calibration.py  test_zones.py
